<resources>
    <string name="app_name">assignment2-FhomarTCM-Pmenino</string>
    <string name="nickname">Nickname</string>
    <string name="play">Play</string>
    <string name="enterGuess">Enter your guess</string>
    <string name="enterButton">Enter</string>
    <string name="fetchWord">Fetching word...</string>
    <string name="winnerText">Winner!!!</string>
    <string name="points">Your points</string>
    <string name="failText">Failed!!!</string>
    <string name="WelcomeText">Welcome! Please enter your nickname before starting the game</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
</resources>